Fixed text alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,11 +8,11 @@
 }
 .containment{
   margin: 0 auto;
-  overflow: hidden;
   text-align: center;
 }
 
 .card {
+  text-align: left;
   font-family: 'Gotham Pro Medium', sans-serif;
   box-shadow: 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
   transition: 0.3s;
@@ -239,3 +239,4 @@ input[type=submit]:hover {
 html {
   scroll-behavior: smooth;
 }
+
